# mcp-server-cdek

./: CLAUDE.md  README.md  development.md  maintainer.md  pyproject.toml  server.json
src/mcp_server_cdek/: __init__.py  __main__.py  cdek_api.py  cli.py  config.py  goods.py  models.py  server.py
tests/: conftest.py  test_calculator.py  test_config.py  test_delivery.py  test_delivery_points.py  test_goods.py  test_intakes.py  test_locations.py  test_models.py  test_orders.py  test_other.py  test_waybill.py  test_webhooks.py
