[project]
name = "mcp-server-cdek"
version = "0.2.0"
description = "MCP server for CDEK delivery service API — create orders, track shipments, search delivery points"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28",
]

[project.scripts]
mcp-server-cdek = "mcp_server_cdek:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_cdek"]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.21", "anyio>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
